@@ -33,6 +33,7 @@
 	* Fixed a bug where creating a page translation did not trigger re-indexing of the page
 	* Fixed a bug where hiding a page translation did not trigger garbage collection of the page
 	* Fixed bug #36329: Opensearch does not provide L parameter
+	* Added feature #36486: Initialize Solr connections via CLI
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
